# ukui-panel

./: .gitignore  .translation-update  CHANGELOG  CMakeLists.txt  Makefile  README.md  ilxqtpanelplugin.h  lxqtpanelpluginconfigdialog.cpp  main.cpp  panelpluginsmodel.cpp  panelpluginsmodel.h  plugin.cpp  plugin.cpp.bak  plugin.h  pluginsettings.cpp  pluginsettings.h  ukui-panel  ukui-panel.pro  ukui-panel.pro.user.622c735  ukuimenu.cpp  ukuimenu.h  ukuipanel.cpp  ukuipanel.h  ukuipanelapplication.cpp  ukuipanelapplication.h  ukuipluginmoveprocessor.cpp  ukuipluginmoveprocessor.h
.pc/: applied-patches
autostart/: CMakeLists.txt  ukui-panel.desktop.in
cmake/: BuildPlugin.cmake
dbus-server/: CMakeLists.txt  dbus.cpp  main.cpp  widget.h
menu/: CMakeLists.txt  lxqt-applications.menu
menu/desktop-directories/: lxqt-settings.directory.in
panel/: CMakeLists.txt  comm_func.cpp  ilxqtpanelplugin.h  iukuipanel.h  iukuipanelplugin.h  main.cpp  panelpluginsmodel.cpp  panelpluginsmodel.h  plugin.cpp  plugin.h  pluginmoveprocessor.cpp  pluginmoveprocessor.h  pluginsettings.cpp  pluginsettings.h  pluginsettings_p.h  popupmenu.cpp  popupmenu.h  ukuipanel.cpp  ukuipanel.h  ukuipanelapplication.cpp  ukuipanelapplication.h  ukuipanelapplication_p.h  ukuipanelglobals.h  ukuipanellayout.cpp  ukuipanellayout.h  ukuipanellimits.h  ukuipanelpluginconfigdialog.cpp  ukuipanelpluginconfigdialog.h  windownotifier.cpp  windownotifier.h
panel/common/: ukuiapplication.cpp  ukuiapplication.h  ukuiautostartentry.cpp  ukuiautostartentry.h  ukuiconfigdialog.cpp  ukuiconfigdialog.h  ukuiglobals.h  ukuigridlayout.cpp  ukuigridlayout.h  ukuihtmldelegate.cpp  ukuihtmldelegate.h  ukuinotification.cpp  ukuinotification.h  ukuinotification_p.h  ukuiplugininfo.cpp  ukuiplugininfo.h  ukuipowermanager.cpp  ukuipowermanager.h  ukuiprogramfinder.cpp  ukuiprogramfinder.h  ukuirotatedwidget.cpp  ukuirotatedwidget.h  ukuiscreensaver.cpp  ukuiscreensaver.h  ukuisettings.cpp  ukuisettings.h  ukuisingleapplication.cpp  ukuisingleapplication.h  ukuitranslator.cpp  ukuitranslator.h
panel/common/configdialog/: ukuiconfigdialog.cpp  ukuiconfigdialog.h  ukuiconfigdialog_p.h  ukuiconfigdialogcmdlineoptions.cpp  ukuiconfigdialogcmdlineoptions.h  ukuipageselectwidget.cpp  ukuipageselectwidget.h
panel/common/ukuipower/: ukuipower.cpp  ukuipower.h  ukuipowerproviders.cpp  ukuipowerproviders.h
panel/config/: addplugindialog.cpp  addplugindialog.h  configpaneldialog.cpp  configpaneldialog.h  configpanelwidget.cpp  configpanelwidget.h  configpluginswidget.cpp  configpluginswidget.h
panel/dbus-server/: CMakeLists.txt  CMakeLists.txt.autosave  dbus-adaptor.cpp  dbus-adaptor.h  dbus.cpp  dbus.h  widget.cpp
panel/resources/: panel.conf  ukui-panel.desktop
panel/translations/: ukui-panel.ts  ukui-panel_ar.ts  ukui-panel_ca.ts  ukui-panel_cs.ts  ukui-panel_cy.ts  ukui-panel_da.ts  ukui-panel_de.ts  ukui-panel_el.ts  ukui-panel_eo.ts  ukui-panel_es.ts  ukui-panel_es_UY.ts  ukui-panel_es_VE.ts  ukui-panel_eu.ts  ukui-panel_fa.ts  ukui-panel_fi.ts  ukui-panel_fr.ts  ukui-panel_gl.ts  ukui-panel_he.ts  ukui-panel_hr.ts  ukui-panel_hu.ts  ukui-panel_ia.ts  ukui-panel_id.ts  ukui-panel_it.ts  ukui-panel_ja.ts  ukui-panel_ko.ts  ukui-panel_lt.ts  ukui-panel_nb_NO.ts  ukui-panel_nl.ts  ukui-panel_pl.ts  ukui-panel_pt.ts  ukui-panel_pt_BR.ts  ukui-panel_ro_RO.ts  ukui-panel_ru.ts  ukui-panel_sk_SK.ts  ukui-panel_sl.ts  ukui-panel_sr@latin.ts  ukui-panel_sr_BA.ts  ukui-panel_sr_RS.ts  ukui-panel_th_TH.ts  ukui-panel_tr.ts  (+3 more)
plugin-calendar/: CMakeLists.txt  ukuicalendar.cpp  ukuicalendar.h  ukuiwebviewdialog.cpp  ukuiwebviewdialog.h
plugin-calendar/html/: index.js  ukui.html
plugin-calendar/translations/: calendar.ts
plugin-mount/: CMakeLists.txt  button.cpp  configuration.cpp  configuration.h  lxqtmountplugin.cpp  lxqtmountplugin.h  menudiskitem.cpp  popup.cpp  popup.h  ukuimountplugin.cpp  ukuimountplugin.h
plugin-mount/actions/: deviceaction.cpp  deviceaction.h  deviceaction_info.cpp  deviceaction_info.h  deviceaction_menu.cpp  deviceaction_menu.h  deviceaction_nothing.cpp  deviceaction_nothing.h
plugin-mount/resources/: mount.desktop.in
plugin-powerswitch/: CMakeLists.txt  powerswitch.cpp  powerswitch.h
plugin-powerswitch/resources/: powerswitch.desktop.in
plugin-recyclebin/: CMakeLists.txt  recyclebin.cpp  recyclebin.h
plugin-recyclebin/resources/: recyclebin.desktop.in
plugin-segmentation/: CMakeLists.txt  segmentation.cpp  segmentation.h  startmenu.cpp  startmenu.h
plugin-segmentation/resources/: segmentation.desktop.in
plugin-segmentation/translations/: startmenu_zh_CN.desktop
plugin-startmenu/: CMakeLists.txt  button.h  lxqtmainmenuconfiguration.cpp  main.cpp  startmenu.cpp  startmenu.h  startmenu.ui
plugin-startmenu/img/: ukui-panel_zh_CN.qm
plugin-startmenu/lib/: libinterface.so.1.0.0
plugin-startmenu/menu/src/FunctionWidget/: fullfunctionwidget.h  functionwidget.h
plugin-startmenu/menu/src/LetterWidget/: fullletterwidget.h  letterwidget.h
plugin-startmenu/menu/src/MainViewWidget/: mainviewwidget.h
plugin-startmenu/menu/src/MainWindow/: mainwindow.cpp  mainwindow.h
plugin-startmenu/menu/src/SideBarWidget/: sidebarwidget.h
plugin-startmenu/resources/: startmenu.desktop.in
plugin-startmenu/src/FunctionWidget/: fullfunctionwidget.cpp  fullfunctionwidget.h
plugin-startmenu/src/LetterWidget/: fullletterwidget.cpp  fullletterwidget.h
plugin-startmenu/src/MainViewWidget/: mainviewwidget.h
plugin-startmenu/src/MainWindow/: mainwindow.cpp  mainwindow.ui
plugin-startmenu/src/SearchResultWidget/: fullsearchresultwidget.cpp  fullsearchresultwidget.h  searchresultwidget.cpp  searchresultwidget.h
plugin-startmenu/src/SideBarWidget/: sidebarwidget.h
plugin-taskview/: CMakeLists.txt  taskview.cpp  taskview.h  xdgcachedmenu.h
plugin-taskview/translations/: startmenu.ts
plugin-tray/: CMakeLists.txt  lxqttray.cpp  lxqttray.h  lxqttrayplugin.cpp  lxqttrayplugin.h  trayicon.cpp  trayicon.h  ukuitray.cpp  ukuitray.h  ukuitrayplugin.cpp  ukuitrayplugin.h  xfitman.cpp  xfitman.h
(+281 files in other folders)
